--- a/index.html
+++ b/index.html
@@ -3,17 +3,299 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSONBin Example</title>
-    <script src="assets/js/scripts.js" defer></script>
+    <title>List App</title>
+    <link href="assets/css/styles.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Manage Your Data</h1>
-    <form id="dataForm">
-        <input type="text" id="txtTitle" placeholder="Title" required>
-        <input type="text" id="txtAuthorName" placeholder="Author Name" required>
-        <textarea id="txtDescription" placeholder="Description" required></textarea>
-        <button type="submit">Add Item</button>
-    </form>
-    <div id="itemList"></div>
+    <div class="d-flex flex-column h-100">
+        <header>
+            <div class="container">
+                <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+                  <a href="/" class="d-flex align-items-center mb-3 mb-md-0 text-dark text-decoration-none">
+                    <span class="fs-4">Simple header</span>
+                  </a>
+
+                </header>
+              </div>
+        </header>
+        <main class="flex-fill">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card">
+                            <div class="card-header">
+                              Featured
+                            </div>
+                            <div class="card-body">
+                                <form class="row g-3 needs-validation" id="form" novalidate>
+                                    <div class="col-md-12">
+                                      <label for="txtTitle" class="form-label">Title</label>
+                                      <input type="text" class="form-control" id="txtTitle">
+                                      <div class="valid-feedback">
+                                        Looks good!
+                                      </div>
+                                    </div>
+                                    <div class="col-xl-6 col-md-6">
+                                      <label for="txtAuthorName" class="form-label">Author Name</label>
+                                      <input type="text" class="form-control" id="txtAuthorName">
+                                      <div class="valid-feedback">
+                                        Looks good!
+                                      </div>
+                                    </div>
+                                    <div class="col-xl-3 col-md-6">
+                                      <label for="txtDate" class="form-label">Date</label>
+                                      <input type="date" class="form-control" id="txtDate" >
+                                      <div class="invalid-feedback">
+                                        Please provide a valid city.
+                                      </div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <label for="txtDescription" class="form-label">Description</label>
+                                        <textarea class="form-control" id="txtDescription" rows="3"></textarea>
+                                      </div>
+                                    <div class="col-12">
+                                        <button class="btn btn-primary" type="button" onclick="addItem()">Submit form</button>
+                                    </div>
+                                  </form>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-md-6">
+                        <!-- List -->
+                        <div class="list-group" id="itemList">
+                            <!-- Items will be added here dynamically -->
+                        </div>
+
+                        <!-- <div class="list-group">
+                            <div class="list-group-item list-group-item-action " >
+                              <div class="d-flex w-100 justify-content-between gap-2">
+                                <h5 class="mb-1 text-truncate title" title="">List group item heading</h5>
+                                <small class="text-nowrap text-muted small">3 days ago</small>
+                              </div>
+                              <p class="text-muted small mb-1">testste stest</p>
+                              <p class="mb-1 description">Some placeholder content in a paragraph.List group item headingList group item headingList group item headingList group item heading</p>
+                              <button class="toggle-btn btn btn-outline-primary btn-sm mt-2" onclick="toggleDescription(this)">Read More</button>
+                            </div>
+                            <div class="list-group-item list-group-item-action " >
+                              <div class="d-flex w-100 justify-content-between gap-2">
+                                <h5 class="mb-1 text-truncate title" title="">List group item heading</h5>
+                                <small class="text-nowrap text-muted small">3 days ago</small>
+                              </div>
+                              <p class="text-muted small mb-1">testste stest</p>
+                              <p class="mb-1 description">Some placeholder content in a paragraph.List group item headingList group item headingList group item headingList group item heading</p>
+                              <button class="toggle-btn btn btn-outline-primary btn-sm mt-2" onclick="toggleDescription(this)">Read More</button>
+                            </div>
+                          </div> -->
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer class="pt-3 my-3 text-muted border-top text-center">
+                Created by the Bootstrap team · © 2021
+        </footer>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+    <script src="assets/js/scripts.js"></script>
+
+
+    <script>
+        let editMode = false;
+        let editElementId = null;
+
+        function addItem() {
+            // Get values from the form
+            const title = document.getElementById("txtTitle").value;
+            const author = document.getElementById("txtAuthorName").value;
+            let date = document.getElementById("txtDate").value;
+            const description = document.getElementById("txtDescription").value;
+
+            // If date is not selected, use today's date in yyyy-mm-dd format
+            if (!date) {
+                const today = new Date();
+                date = today.toISOString().split('T')[0]; // Format as yyyy-mm-dd
+            }
+
+            // Generate a unique ID for each item
+            const uniqueId = editMode ? editElementId : `item-${Date.now()}`;
+
+            // Check if we are in edit mode
+            if (editMode) {
+                // Update the existing item using the unique ID
+                const editElement = document.querySelector(`[data-id="${uniqueId}"]`);
+                editElement.querySelector(".title").textContent = title;
+                editElement.querySelector(".title").setAttribute("title", title);
+                editElement.querySelector(".authorName").textContent = author;
+                editElement.querySelector(".date").textContent = date;
+                editElement.querySelector(".description").textContent = description;
+
+                // Reset edit mode
+                editMode = false;
+                editElementId = null;
+            } else {
+                // Create a new list item element
+                const item = document.createElement("div");
+                item.classList.add("list-group-item", "list-group-item-action");
+                item.setAttribute("data-id", uniqueId);  // Assign the unique ID to the element
+
+                // HTML structure for the new item
+                item.innerHTML = `
+                    <div class="d-flex w-100 justify-content-between gap-2">
+                        <h5 class="mb-1 text-truncate title" title="${title}">${title}</h5>
+                        <small class="text-nowrap text-muted small date">${date}</small>
+                    </div>
+                    <p class="text-muted small mb-1 authorName">${author}</p>
+                    <p class="mb-1 description">${description}</p>
+                    <button class="toggle-btn btn btn-outline-primary btn-sm mt-2" onclick="toggleDescription(this)">Read More</button>
+                    <button class="btn btn-outline-secondary btn-sm mt-2" onclick="editItem('${uniqueId}')">Edit</button>
+                    <button class="btn btn-outline-danger btn-sm mt-2" onclick="deleteItem('${uniqueId}')">Delete</button>
+                `;
+
+                // Append the item to the list
+                document.getElementById("itemList").appendChild(item);
+            }
+
+            // Clear form fields
+            document.getElementById("form").reset();
+        }
+
+        // Function to delete an item
+        function deleteItem(id) {
+            const item = document.querySelector(`[data-id="${id}"]`);
+            if (item) item.remove();
+        }
+
+        // Function to edit an item
+        function editItem(id) {
+            const item = document.querySelector(`[data-id="${id}"]`);
+            if (!item) return;
+
+            const title = item.querySelector(".title").textContent;
+            const author = item.querySelector(".authorName").textContent;
+            const description = item.querySelector(".description").textContent;
+            const date = item.querySelector(".date").textContent;
+
+            // Populate the form fields with the item's current values
+            document.getElementById("txtTitle").value = title;
+            document.getElementById("txtAuthorName").value = author;
+            document.getElementById("txtDescription").value = description;
+
+            // Set the date input to the same date without converting to local timezone
+            document.getElementById("txtDate").value = date;
+
+            // Set edit mode and store the element's unique ID
+            editMode = true;
+            editElementId = id;
+        }
+
+        // Optional: Function to toggle description (expand/collapse)
+        function toggleDescription(button) {
+            const description = button.previousElementSibling;
+            description.classList.toggle("show_full_text");
+            button.textContent = description.classList.contains("show_full_text") ? "Read Less" : "Read More";
+        }
+    </script>
+
+
+    <!-- <script>
+        let editMode = false;
+        let editElement = null;
+
+        function addItem() {
+            // Get values from the form
+            const title = document.getElementById("txtTitle").value;
+            const author = document.getElementById("txtAuthorName").value;
+            const date = document.getElementById("txtDate").value;
+            const description = document.getElementById("txtDescription").value;
+
+            // Check if we are in edit mode
+            if (editMode) {
+                // Update the existing item
+                editElement.querySelector(".title").textContent = title;
+                editElement.querySelector(".title").setAttribute("title", title);
+                editElement.querySelector(".authorName").textContent = author;
+                editElement.querySelector(".date").textContent = new Date(date).toLocaleDateString();
+                editElement.querySelector(".description").textContent = description;
+
+                // Reset edit mode
+                editMode = false;
+                editElement = null;
+            } else {
+                // Create a new list item element
+                const item = document.createElement("div");
+                item.classList.add("list-group-item", "list-group-item-action");
+
+                // HTML structure for the new item
+                item.innerHTML = `
+                    <div class="d-flex w-100 justify-content-between gap-2">
+                        <h5 class="mb-1 text-truncate title" title="${title}">${title}</h5>
+                        <small class="text-nowrap text-muted small date">${new Date(date).toLocaleDateString()}</small>
+                    </div>
+                    <p class="text-muted small mb-1 authorName">${author}</p>
+                    <p class="mb-1 description">${description}</p>
+                    <button class="toggle-btn btn btn-outline-primary btn-sm mt-2" onclick="toggleDescription(this)">Read More</button>
+                    <button class="btn btn-outline-secondary btn-sm mt-2" onclick="editItem(this)">Edit</button>
+                    <button class="btn btn-outline-danger btn-sm mt-2" onclick="deleteItem(this)">Delete</button>
+                `;
+
+                // Append the item to the list
+                document.getElementById("itemList").appendChild(item);
+            }
+
+            // Clear form fields
+            document.getElementById("form").reset();
+        }
+
+        // Function to delete an item
+        function deleteItem(button) {
+            button.parentElement.remove();
+        }
+
+        // Function to edit an item
+        function editItem(button) {
+            const item = button.parentElement;
+            const title = item.querySelector(".title").textContent;
+            const author = item.querySelector(".authorName").textContent;
+            const description = item.querySelector(".description").textContent;
+            const date = item.querySelector(".date").textContent;
+
+            // Populate the form fields with the item's current values
+            document.getElementById("txtTitle").value = title;
+            document.getElementById("txtAuthorName").value = author;
+            document.getElementById("txtDescription").value = description;
+
+            // Set the date input correctly by parsing the displayed date back to the input format
+            const parsedDate = new Date(date);
+            const formattedDate = parsedDate.toISOString().split('T')[0];
+            document.getElementById("txtDate").value = formattedDate;
+
+            // Set edit mode
+            editMode = true;
+            editElement = item;
+        }
+
+        // Optional: Function to toggle description (expand/collapse)
+        function toggleDescription(button) {
+            const description = button.previousElementSibling;
+            description.classList.toggle("show_full_text");
+            button.textContent = description.classList.contains("show_full_text") ? "Read More" : "Read Less";
+        }
+    </script> -->
+
+    <!-- <script>
+        function toggleDescription(button) {
+          const description = button.previousElementSibling;
+          description.classList.toggle("show_full_text");
+
+          if (description.classList.contains("show_full_text")) {
+            button.textContent = "Read Less";
+          } else {
+            button.textContent = "Read More";
+          }
+        }
+      </script> -->
 </body>
 </html>
