--- a/list-page.html
+++ b/list-page.html
@@ -125,7 +125,29 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
   <script src="assets/js/scripts.js"></script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
 
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBAuQsNQ8hvjJXMHtUOVx9GgR4MRHEIz7Y",
+      authDomain: "arise-creativity.firebaseapp.com",
+      projectId: "arise-creativity",
+      storageBucket: "arise-creativity.firebasestorage.app",
+      messagingSenderId: "823338118500",
+      appId: "1:823338118500:web:1f206c4f53c58b1e23de71",
+      measurementId: "G-ND2M4LNGWL"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 
 </html>
