--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header class="d-flex flex-wrap justify-content-between py-3 mb-4 border-bottom">
           <div class="d-flex align-items-center">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 text-dark text-decoration-none border-end pe-2 border-dark">
-              <span class="fs-4">hheader</span>
+              <span class="fs-4">header</span>
             </a>
             <a href="list-page.html" class="nav-link">Add Quotes</a>
             <a href="index.html" class="nav-link">View Quotes</a>
