--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>List App</title>
   <link href="assets/css/styles.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -35,7 +36,29 @@
 
     <main class="flex-fill">
       <div class="container">
-        <div class="row">
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <div class="card border-0 rounded-3 mb-4" style="background-color: #fdf0ce;">
+              <div class="card-body">
+                <div class="d-flex">
+                  <div class="flex-shrink-0">
+                    <h2 class=""><i class="fas fa-quote-left"></i></h2>
+                  </div>
+                  <div class="flex-grow-1 ms-3">
+                    <div class="h-100 d-flex flex-column justify-content-between" style="min-height: 200px;">
+
+                      <p class="mb-1 mt-3 fs-5" id="quotesDescription">description</p>
+                      <div class="d-flex justify-content-between align-items-end">
+                        <p class="small mb-1 fst-italic authorName" id="quotesAuthorName">authorName</p>
+                        <button type="button" class="btn btn-primary btn-sm" id="getNewQuotes" onclick="getRandomQuote()" >New Quotes <span class="ms-1"><i class="fas fa-sync"  id="getNewQuotesIcons" ></i></span></button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
           <div class="col-md-12">
             <div class="M_title_wrappper mb-4">
               <h1 class="title">
