--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   <div class="d-flex flex-column h-100">
     <header>
       <div class="container">
-        <header class="d-flex flex-wrap justify-content-between py-3 mb-4 border-bottom">
+        <header class="d-flex flex-wrap justify-content-between py-3 border-bottom">
           <div class="d-flex align-items-center">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 text-dark text-decoration-none border-end pe-2 border-dark">
               <span class="fs-4">header</span>
             </a>
-            <a href="list-page.html" class="nav-link">Add Quotes</a>
-            <a href="index.html" class="nav-link">View Quotes</a>
+            <!-- <a href="list-page.html" class="nav-link">Add Quotes</a>
+            <a href="index.html" class="nav-link">View Quotes</a> -->
           </div>
           <div class="d-flex gap-3">
             <button class="btn btn-outline-success btn-sm mt-2" onclick="restoreAllDeletedItems()">Restore</button>
@@ -35,10 +35,10 @@
     </header>
 
     <main class="flex-fill">
-      <div class="container">
-        <div class="row justify-content-center">
+      <div class="container-fluid bg-light mb-4">
+        <div class="row justify-content-center py-4">
           <div class="col-md-6">
-            <div class="card border-0 rounded-3 mb-4" style="background-color: #fdf0ce;">
+            <div class="card border-0 rounded-3" style="background-color: #fdf0ce;">
               <div class="card-body">
                 <div class="d-flex">
                   <div class="flex-shrink-0">
@@ -59,12 +59,23 @@
             </div>
 
           </div>
+        </div>
+        </div>
+      <div class="container">
+        <div class="row justify-content-center">
           <div class="col-md-12">
-            <div class="M_title_wrappper mb-4">
-              <h1 class="title">
+
+            <!-- <div class="M_title_wrappper mb-4">
+              <h1 class="title small">
                 Quotes to Explore
               </h1>
-            </div>
+            </div> -->
+            <div class="d-flex justify-content-between align-items-center border-bottom pb-2 mb-4">
+              <h3 class="text-dark">Wisdom Worth Exploring</h3>
+              <a href="list-page.html" class="btn btn-primary px-4" id="add-quote-btn">
+                  + Add Quote
+              </a>
+          </div>
           </div>
           <div class="col-md-12 order-md-2 order-1">
             <div class="quotes-list" id="quotes">
