--- a/list-page.html
+++ b/list-page.html
@@ -22,8 +22,8 @@
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 text-dark text-decoration-none border-end pe-2 border-dark">
               <span class="fs-4">Simple header</span>
             </a>
-            <a href="list-page.html" class="nav-link">Add Quotes</a>
-            <a href="index.html" class="nav-link">View Quotes</a>
+            <!-- <a href="list-page.html" class="nav-link">Add Quotes</a>
+            <a href="index.html" class="nav-link">View Quotes</a> -->
           </div>
           <div class="d-flex gap-3">
             <button class="btn btn-outline-success btn-sm mt-2" onclick="restoreAllDeletedItems()">Restore</button>
@@ -36,10 +36,13 @@
     <main class="flex-fill">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 order-md-1 order-2">
+          <div class="col-md-4 order-md-1 order-1">
             <div class="card">
-              <div class="card-header">
-                Add Item
+              <div class="card-header d-flex justify-content-between align-items-center">
+                <h6 class="mb-0">
+                  Add Item
+                </h6>
+                <a href="index.html" class="text-decoration-none">View Quotes</a>
               </div>
               <div class="card-body">
                 <form class="row g-3 needs-validation" id="dataForm" novalidate>
@@ -76,7 +79,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-8 order-md-2 order-1">
+          <div class="col-md-8 order-md-2 order-2">
             <div class="form-group d-flex mb-3">
               <input type="search" class="form-control flex-grow-1 " id="searchInput" placeholder="Search items..."
                 oninput="searchItems()">
