--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>List App</title>
   <link href="assets/css/styles.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 </head>
 
 <body>
@@ -20,7 +20,8 @@
       <div class="container">
         <header class="d-flex flex-wrap justify-content-between py-3 border-bottom">
           <div class="d-flex align-items-center">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 text-dark text-decoration-none border-end pe-2 border-dark">
+            <a href="/"
+              class="d-flex align-items-center mb-3 mb-md-0 text-dark text-decoration-none border-end pe-2 border-dark">
               <span class="fs-4">header</span>
             </a>
             <!-- <a href="list-page.html" class="nav-link">Add Quotes</a>
@@ -28,8 +29,9 @@
           </div>
           <div class="d-flex gap-3">
             <button class="btn btn-outline-success btn-sm mt-2" onclick="restoreAllDeletedItems()">Restore</button>
-            <button class="btn btn-outline-danger btn-sm mt-2" onclick="permanentlyDeleteMarkedItems()">Permanently Delete</button>
-        </div>
+            <button class="btn btn-outline-danger btn-sm mt-2" onclick="permanentlyDeleteMarkedItems()">Permanently
+              Delete</button>
+          </div>
         </header>
       </div>
     </header>
@@ -49,8 +51,13 @@
 
                       <p class="mb-1 mt-3 fs-5" id="quotesDescription">description</p>
                       <div class="d-flex justify-content-between align-items-end">
-                        <p class="small mb-1 fst-italic authorName" id="quotesAuthorName">authorName</p>
-                        <button type="button" class="btn btn-primary btn-sm" id="getNewQuotes" onclick="getRandomQuote()" >New Quotes <span class="ms-1"><i class="fas fa-sync"  id="getNewQuotesIcons" ></i></span></button>
+                        <div class="d-flex gap-2">
+                          <i class="fas fa-pen-nib"></i>
+                          <p class="small mb-1 fst-italic authorName" id="quotesAuthorName">authorName</p>
+                        </div>
+                        <button type="button" class="btn btn-primary btn-sm" id="getNewQuotes"
+                          onclick="getRandomQuote()">New Quotes <span class="ms-1"><i class="fas fa-sync"
+                              id="getNewQuotesIcons"></i></span></button>
                       </div>
                     </div>
                   </div>
@@ -60,7 +67,7 @@
 
           </div>
         </div>
-        </div>
+      </div>
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-12">
@@ -73,9 +80,9 @@
             <div class="d-flex justify-content-between align-items-center border-bottom pb-2 mb-4">
               <h3 class="text-dark">Wisdom Worth Exploring</h3>
               <a href="list-page.html" class="btn btn-primary px-4" id="add-quote-btn">
-                  + Add Quote
+                + Add Quote
               </a>
-          </div>
+            </div>
           </div>
           <div class="col-md-12 order-md-2 order-1">
             <div class="quotes-list" id="quotes">
