--- a/list-page.html
+++ b/list-page.html
@@ -35,7 +35,7 @@
 
     <main class="flex-fill">
       <div class="container">
-        <div class="row">
+        <div class="row g-4">
           <div class="col-md-4 order-md-1 order-1">
             <div class="card">
               <div class="card-header d-flex justify-content-between align-items-center">
@@ -93,29 +93,6 @@
             <nav class="container mt-3 d-flex justify-content-center">
               <ul class="pagination justify-content-center"></ul>
             </nav>
-
-            <!-- Pagination controls -->
-            <!-- <nav class="container mt-3 d-flex justify-content-center">
-                        <ul class="pagination justify-content-center">
-                          <li class="page-item ">
-                            <button class="page-link" onclick="prevPage()">Previous</button>
-                          </li>
-                          <li class="page-item"><a class="page-link" href="javascript:void(0)" id="pageIndicator">1</a></li>
-                          <li class="page-item">
-                            <button class="page-link" onclick="nextPage()">Next</button>
-                          </li>
-                        </ul>
-                      </nav> -->
-
-            <!-- <div class="container mt-3 d-flex justify-content-center">
-                        <button class="btn btn-secondary me-2" onclick="prevPage()">Previous</button>
-                        <span id="pageIndicator">Page 1</span>
-                        <button class="btn btn-secondary ms-2" onclick="nextPage()">Next</button>
-                    </div> -->
-            <!-- List -->
-            <!-- <div class="list-group" id="itemList"> -->
-            <!-- Items will be added here dynamically -->
-            <!-- </div> -->
           </div>
         </div>
       </div>
@@ -129,31 +106,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
   <script src="assets/js/crud-api.js" type="module"> </script>
-
-  <!-- <script src="assets/js/scripts.js"></script> -->
-  <!-- <script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-analytics.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyBAuQsNQ8hvjJXMHtUOVx9GgR4MRHEIz7Y",
-      authDomain: "arise-creativity.firebaseapp.com",
-      projectId: "arise-creativity",
-      storageBucket: "arise-creativity.firebasestorage.app",
-      messagingSenderId: "823338118500",
-      appId: "1:823338118500:web:1f206c4f53c58b1e23de71",
-      measurementId: "G-ND2M4LNGWL"
-    };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-  </script> -->
 </body>
 
 </html>
